// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollapsibleNav renders links grouped by category 1`] = `
Array [
  <button
    aria-controls="collapsibe-nav"
    aria-expanded="true"
    aria-pressed="true"
  />,
  <nav
    data-eui="EuiFlyout"
    data-test-subj="collapsibleNav"
    role="dialog"
  >
    <button
      aria-label="Close this dialog"
      data-test-subj="euiFlyoutCloseButton"
      type="button"
    />
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
      style="flex-shrink: 0;"
    >
      <div
        class="euiCollapsibleNavGroup eui-yScroll emotion-euiCollapsibleNavGroup-notCollapsible-dark"
        id="generated-id"
        style="max-height: 40vh;"
      >
        <div
          class="euiCollapsibleNavGroup__children emotion-euiCollapsibleNavGroup__children"
        >
          <span
            class="euiThemeProvider emotion-euiColorMode-dark"
          >
            <ul
              class="euiListGroup emotion-euiListGroup"
              style="max-inline-size: none;"
            >
              <li
                class="euiListItemLayout__wrapper emotion-euiListItemLayout__wrapper-isInteractive"
                data-test-subj="collapsibleNavCustomNavLink-wrapper"
              >
                <a
                  class="euiListItemLayout euiListGroupItem euiListGroupItem__button emotion-euiListItemLayout-euiListItemLayout__action-euiListGroupItem-euiListGroupItem__inner-text"
                  data-test-subj="collapsibleNavCustomNavLink"
                  href="Custom link"
                  rel="noreferrer"
                >
                  <span
                    class="euiListItemLayout__content emotion-euiListItemLayout__content"
                  >
                    <span
                      class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
                      title="Custom link"
                    >
                      Custom link
                    </span>
                  </span>
                </a>
              </li>
            </ul>
          </span>
        </div>
      </div>
    </div>
    <hr
      class="euiHorizontalRule emotion-euiHorizontalRule-full"
    />
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
      style="flex-shrink: 0;"
    >
      <div
        class="euiCollapsibleNavGroup eui-yScroll emotion-euiCollapsibleNavGroup-notCollapsible-light"
        id="generated-id"
        style="max-height: 40vh;"
      >
        <div
          class="euiCollapsibleNavGroup__children emotion-euiCollapsibleNavGroup__children"
        >
          <ul
            aria-label="Pinned links"
            class="euiListGroup emotion-euiListGroup"
            style="max-inline-size: none;"
          >
            <li
              class="euiListItemLayout__wrapper emotion-euiListItemLayout__wrapper-isInteractive"
              data-test-subj="homeLink-wrapper"
            >
              <a
                class="euiListItemLayout euiListGroupItem euiListGroupItem__button emotion-euiListItemLayout-euiListItemLayout__action-euiListGroupItem-euiListGroupItem__inner-text"
                data-test-subj="homeLink"
                href="/test/app/home"
                rel="noreferrer"
              >
                <span
                  class="euiListItemLayout__content emotion-euiListItemLayout__content"
                >
                  <span
                    class="euiListItemLayout__prepend emotion-euiListItemLayout__prepend"
                  >
                    <span
                      class="euiListGroupItem__icon css-0"
                      color="inherit"
                      data-euiicon-type="home"
                    />
                  </span>
                  <span
                    class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
                    title="Home"
                  >
                    Home
                  </span>
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="euiAccordion euiAccordion-isOpen euiCollapsibleNavGroup emotion-euiAccordion-euiCollapsibleNavGroup-isCollapsible-light"
      data-test-subj="collapsibleNavGroup-recentlyViewed"
    >
      <div
        class="euiAccordion__triggerWrapper emotion-EuiAccordionTrigger"
      >
        <button
          aria-controls="generated-id"
          aria-expanded="true"
          class="euiAccordion__button euiCollapsibleNavGroup__heading emotion-euiAccordion__button"
          id="generated-id"
          type="button"
        >
          <span
            class="euiAccordion__buttonContent"
          >
            <div
              class="euiFlexGroup emotion-euiFlexGroup-m-flexStart-center-row"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-grow-1"
              >
                <h3
                  class="euiTitle euiCollapsibleNavGroup__title emotion-euiTitle-xxs"
                  id="generated-id__title"
                >
                  Recently viewed
                </h3>
              </div>
            </div>
          </span>
        </button>
        <button
          aria-controls="generated-id"
          aria-expanded="true"
          aria-hidden="true"
          aria-labelledby="generated-id"
          class="euiButtonIcon euiAccordion__arrow emotion-euiButtonIcon-xs-empty-text-euiAccordion__arrow-right-isOpen"
          tabindex="-1"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="chevronSingleRight"
          />
        </button>
      </div>
      <div
        aria-labelledby="generated-id"
        class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper-isOpen-noTransition"
        id="generated-id"
        role="group"
        style="block-size: 0;"
      >
        <div
          class="euiAccordion__children emotion-euiAccordion__children"
        >
          <div
            class="euiCollapsibleNavGroup__children emotion-euiCollapsibleNavGroup__children-withHeading"
          >
            <ul
              aria-label="Recently viewed links"
              class="euiListGroup emotion-euiListGroup-navRecentsListGroupCss"
              style="max-inline-size: none;"
            >
              <li
                class="euiListItemLayout__wrapper emotion-euiListItemLayout__wrapper-isInteractive"
                data-test-subj="collapsibleNavAppLink--recent-wrapper"
              >
                <a
                  aria-label="recent 1"
                  class="euiListItemLayout euiListGroupItem euiListGroupItem__button emotion-euiListItemLayout-euiListItemLayout__action-euiListGroupItem-euiListGroupItem__inner-subdued"
                  data-test-subj="collapsibleNavAppLink--recent"
                  href="http://localhost/recent%201"
                  rel="noreferrer"
                  title="recent 1"
                >
                  <span
                    class="euiListItemLayout__content emotion-euiListItemLayout__content"
                  >
                    <span
                      class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
                      title="recent 1"
                    >
                      recent 1
                    </span>
                  </span>
                </a>
              </li>
              <li
                class="euiListItemLayout__wrapper emotion-euiListItemLayout__wrapper-isInteractive"
                data-test-subj="collapsibleNavAppLink--recent-wrapper"
              >
                <a
                  aria-label="recent 2"
                  class="euiListItemLayout euiListGroupItem euiListGroupItem__button emotion-euiListItemLayout-euiListItemLayout__action-euiListGroupItem-euiListGroupItem__inner-subdued"
                  data-test-subj="collapsibleNavAppLink--recent"
                  href="http://localhost/recent%202"
                  rel="noreferrer"
                  title="recent 2"
                >
                  <span
                    class="euiListItemLayout__content emotion-euiListItemLayout__content"
                  >
                    <span
                      class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
                      title="recent 2"
                    >
                      recent 2
                    </span>
                  </span>
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <hr
      class="euiHorizontalRule emotion-euiHorizontalRule-full"
    />
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1-navSolutions"
    >
      <div
        class="euiAccordion euiAccordion-isOpen euiCollapsibleNavGroup emotion-euiAccordion-euiCollapsibleNavGroup-isCollapsible-none-navSolutionGroupButton"
        data-test-subj="collapsibleNavGroup-kibana"
      >
        <div
          class="euiAccordion__triggerWrapper emotion-EuiAccordionTrigger"
        >
          <button
            aria-controls="generated-id"
            aria-expanded="true"
            class="euiAccordion__button euiCollapsibleNavGroup__heading emotion-euiAccordion__button"
            id="generated-id"
            type="button"
          >
            <span
              class="euiAccordion__buttonContent"
            >
              <div
                class="euiFlexGroup emotion-euiFlexGroup-m-flexStart-center-row"
              >
                <div
                  class="euiFlexItem emotion-euiFlexItem-growZero"
                >
                  <span
                    data-euiicon-type="logoKibana"
                  />
                </div>
                <div
                  class="euiFlexItem emotion-euiFlexItem-grow-1"
                >
                  <h3
                    class="euiTitle euiCollapsibleNavGroup__title emotion-euiTitle-xxs"
                    id="generated-id__title"
                  >
                    Analytics
                  </h3>
                </div>
              </div>
            </span>
          </button>
          <button
            aria-controls="generated-id"
            aria-expanded="true"
            aria-hidden="true"
            aria-labelledby="generated-id"
            class="euiButtonIcon euiAccordion__arrow emotion-euiButtonIcon-xs-empty-text-euiAccordion__arrow-right-isOpen"
            tabindex="-1"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="chevronSingleRight"
            />
          </button>
        </div>
        <div
          aria-labelledby="generated-id"
          class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper-isOpen-noTransition"
          id="generated-id"
          role="group"
          style="block-size: 0;"
        >
          <div
            class="euiAccordion__children emotion-euiAccordion__children"
          >
            <div
              class="euiCollapsibleNavGroup__children emotion-euiCollapsibleNavGroup__children-withHeading"
            >
              <ul
                aria-label="Primary navigation links, Analytics"
                class="euiListGroup emotion-euiListGroup"
                style="max-inline-size: none;"
              >
                <li
                  class="euiListItemLayout__wrapper emotion-euiListItemLayout__wrapper-isInteractive"
                  data-test-subj="collapsibleNavAppLink-wrapper"
                >
                  <a
                    class="euiListItemLayout euiListGroupItem euiListGroupItem__button emotion-euiListItemLayout-euiListItemLayout__action-euiListGroupItem-euiListGroupItem__inner-subdued"
                    data-test-subj="collapsibleNavAppLink"
                    href="discover"
                    rel="noreferrer"
                  >
                    <span
                      class="euiListItemLayout__content emotion-euiListItemLayout__content"
                    >
                      <span
                        class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
                        title="discover"
                      >
                        discover
                      </span>
                    </span>
                  </a>
                </li>
                <li
                  class="euiListItemLayout__wrapper emotion-euiListItemLayout__wrapper-isInteractive"
                  data-test-subj="collapsibleNavAppLink-wrapper"
                >
                  <a
                    class="euiListItemLayout euiListGroupItem euiListGroupItem__button emotion-euiListItemLayout-euiListItemLayout__action-euiListGroupItem-euiListGroupItem__inner-subdued"
                    data-test-subj="collapsibleNavAppLink"
                    href="visualize"
                    rel="noreferrer"
                  >
                    <span
                      class="euiListItemLayout__content emotion-euiListItemLayout__content"
                    >
                      <span
                        class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
                        title="visualize"
                      >
                        visualize
                      </span>
                    </span>
                  </a>
                </li>
                <li
                  class="euiListItemLayout__wrapper emotion-euiListItemLayout__wrapper-isInteractive"
                  data-test-subj="collapsibleNavAppLink-wrapper"
                >
                  <a
                    class="euiListItemLayout euiListGroupItem euiListGroupItem__button emotion-euiListItemLayout-euiListItemLayout__action-euiListGroupItem-euiListGroupItem__inner-subdued"
                    data-test-subj="collapsibleNavAppLink"
                    href="dashboard"
                    rel="noreferrer"
                  >
                    <span
                      class="euiListItemLayout__content emotion-euiListItemLayout__content"
                    >
                      <span
                        class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
                        title="dashboard"
                      >
                        dashboard
                      </span>
                    </span>
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiAccordion euiAccordion-isOpen euiCollapsibleNavGroup emotion-euiAccordion-euiCollapsibleNavGroup-isCollapsible-none-navSolutionGroupButton"
        data-test-subj="collapsibleNavGroup-observability"
      >
        <div
          class="euiAccordion__triggerWrapper emotion-EuiAccordionTrigger"
        >
          <button
            aria-controls="generated-id"
            aria-expanded="true"
            class="euiAccordion__button euiCollapsibleNavGroup__heading emotion-euiAccordion__button"
            id="generated-id"
            type="button"
          >
            <span
              class="euiAccordion__buttonContent"
            >
              <div
                class="euiFlexGroup emotion-euiFlexGroup-m-flexStart-center-row"
              >
                <div
                  class="euiFlexItem emotion-euiFlexItem-growZero"
                >
                  <span
                    data-euiicon-type="logoObservability"
                  />
                </div>
                <div
                  class="euiFlexItem emotion-euiFlexItem-grow-1"
                >
                  <h3
                    class="euiTitle euiCollapsibleNavGroup__title emotion-euiTitle-xxs"
                    id="generated-id__title"
                  >
                    Observability
                  </h3>
                </div>
              </div>
            </span>
          </button>
          <button
            aria-controls="generated-id"
            aria-expanded="true"
            aria-hidden="true"
            aria-labelledby="generated-id"
            class="euiButtonIcon euiAccordion__arrow emotion-euiButtonIcon-xs-empty-text-euiAccordion__arrow-right-isOpen"
            tabindex="-1"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="chevronSingleRight"
            />
          </button>
        </div>
        <div
          aria-labelledby="generated-id"
          class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper-isOpen-noTransition"
          id="generated-id"
          role="group"
          style="block-size: 0;"
        >
          <div
            class="euiAccordion__children emotion-euiAccordion__children"
          >
            <div
              class="euiCollapsibleNavGroup__children emotion-euiCollapsibleNavGroup__children-withHeading"
            >
              <ul
                aria-label="Primary navigation links, Observability"
                class="euiListGroup emotion-euiListGroup"
                style="max-inline-size: none;"
              >
                <li
                  class="euiListItemLayout__wrapper emotion-euiListItemLayout__wrapper-isInteractive"
                  data-test-subj="collapsibleNavAppLink-wrapper"
                >
                  <a
                    class="euiListItemLayout euiListGroupItem euiListGroupItem__button emotion-euiListItemLayout-euiListItemLayout__action-euiListGroupItem-euiListGroupItem__inner-subdued"
                    data-test-subj="collapsibleNavAppLink"
                    href="metrics"
                    rel="noreferrer"
                  >
                    <span
                      class="euiListItemLayout__content emotion-euiListItemLayout__content"
                    >
                      <span
                        class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
                        title="metrics"
                      >
                        metrics
                      </span>
                    </span>
                  </a>
                </li>
                <li
                  class="euiListItemLayout__wrapper emotion-euiListItemLayout__wrapper-isInteractive"
                  data-test-subj="collapsibleNavAppLink-wrapper"
                >
                  <a
                    class="euiListItemLayout euiListGroupItem euiListGroupItem__button emotion-euiListItemLayout-euiListItemLayout__action-euiListGroupItem-euiListGroupItem__inner-subdued"
                    data-test-subj="collapsibleNavAppLink"
                    href="logs"
                    rel="noreferrer"
                  >
                    <span
                      class="euiListItemLayout__content emotion-euiListItemLayout__content"
                    >
                      <span
                        class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
                        title="logs"
                      >
                        logs
                      </span>
                    </span>
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiAccordion euiAccordion-isOpen euiCollapsibleNavGroup emotion-euiAccordion-euiCollapsibleNavGroup-isCollapsible-none-navSolutionGroupButton"
        data-test-subj="collapsibleNavGroup-securitySolution"
      >
        <div
          class="euiAccordion__triggerWrapper emotion-EuiAccordionTrigger"
        >
          <button
            aria-controls="generated-id"
            aria-expanded="true"
            class="euiAccordion__button euiCollapsibleNavGroup__heading emotion-euiAccordion__button"
            id="generated-id"
            type="button"
          >
            <span
              class="euiAccordion__buttonContent"
            >
              <div
                class="euiFlexGroup emotion-euiFlexGroup-m-flexStart-center-row"
              >
                <div
                  class="euiFlexItem emotion-euiFlexItem-growZero"
                >
                  <span
                    data-euiicon-type="logoSecurity"
                  />
                </div>
                <div
                  class="euiFlexItem emotion-euiFlexItem-grow-1"
                >
                  <h3
                    class="euiTitle euiCollapsibleNavGroup__title emotion-euiTitle-xxs"
                    id="generated-id__title"
                  >
                    Security
                  </h3>
                </div>
              </div>
            </span>
          </button>
          <button
            aria-controls="generated-id"
            aria-expanded="true"
            aria-hidden="true"
            aria-labelledby="generated-id"
            class="euiButtonIcon euiAccordion__arrow emotion-euiButtonIcon-xs-empty-text-euiAccordion__arrow-right-isOpen"
            tabindex="-1"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="chevronSingleRight"
            />
          </button>
        </div>
        <div
          aria-labelledby="generated-id"
          class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper-isOpen-noTransition"
          id="generated-id"
          role="group"
          style="block-size: 0;"
        >
          <div
            class="euiAccordion__children emotion-euiAccordion__children"
          >
            <div
              class="euiCollapsibleNavGroup__children emotion-euiCollapsibleNavGroup__children-withHeading"
            >
              <ul
                aria-label="Primary navigation links, Security"
                class="euiListGroup emotion-euiListGroup"
                style="max-inline-size: none;"
              >
                <li
                  class="euiListItemLayout__wrapper emotion-euiListItemLayout__wrapper-isInteractive"
                  data-test-subj="collapsibleNavAppLink-wrapper"
                >
                  <a
                    class="euiListItemLayout euiListGroupItem euiListGroupItem__button emotion-euiListItemLayout-euiListItemLayout__action-euiListGroupItem-euiListGroupItem__inner-subdued"
                    data-test-subj="collapsibleNavAppLink"
                    href="siem"
                    rel="noreferrer"
                  >
                    <span
                      class="euiListItemLayout__content emotion-euiListItemLayout__content"
                    >
                      <span
                        class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
                        title="siem"
                      >
                        siem
                      </span>
                    </span>
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiAccordion euiAccordion-isOpen euiCollapsibleNavGroup emotion-euiAccordion-euiCollapsibleNavGroup-isCollapsible-none-navSolutionGroupButton"
        data-test-subj="collapsibleNavGroup-management"
      >
        <div
          class="euiAccordion__triggerWrapper emotion-EuiAccordionTrigger"
        >
          <button
            aria-controls="generated-id"
            aria-expanded="true"
            class="euiAccordion__button euiCollapsibleNavGroup__heading emotion-euiAccordion__button"
            id="generated-id"
            type="button"
          >
            <span
              class="euiAccordion__buttonContent"
            >
              <div
                class="euiFlexGroup emotion-euiFlexGroup-m-flexStart-center-row"
              >
                <div
                  class="euiFlexItem emotion-euiFlexItem-growZero"
                >
                  <span
                    data-euiicon-type="managementApp"
                  />
                </div>
                <div
                  class="euiFlexItem emotion-euiFlexItem-grow-1"
                >
                  <h3
                    class="euiTitle euiCollapsibleNavGroup__title emotion-euiTitle-xxs"
                    id="generated-id__title"
                  >
                    Management
                  </h3>
                </div>
              </div>
            </span>
          </button>
          <button
            aria-controls="generated-id"
            aria-expanded="true"
            aria-hidden="true"
            aria-labelledby="generated-id"
            class="euiButtonIcon euiAccordion__arrow emotion-euiButtonIcon-xs-empty-text-euiAccordion__arrow-right-isOpen"
            tabindex="-1"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="chevronSingleRight"
            />
          </button>
        </div>
        <div
          aria-labelledby="generated-id"
          class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper-isOpen-noTransition"
          id="generated-id"
          role="group"
          style="block-size: 0;"
        >
          <div
            class="euiAccordion__children emotion-euiAccordion__children"
          >
            <div
              class="euiCollapsibleNavGroup__children emotion-euiCollapsibleNavGroup__children-withHeading"
            >
              <ul
                aria-label="Primary navigation links, Management"
                class="euiListGroup emotion-euiListGroup"
                style="max-inline-size: none;"
              >
                <li
                  class="euiListItemLayout__wrapper emotion-euiListItemLayout__wrapper-isInteractive"
                  data-test-subj="collapsibleNavAppLink-wrapper"
                >
                  <a
                    class="euiListItemLayout euiListGroupItem euiListGroupItem__button emotion-euiListItemLayout-euiListItemLayout__action-euiListGroupItem-euiListGroupItem__inner-subdued"
                    data-test-subj="collapsibleNavAppLink"
                    href="monitoring"
                    rel="noreferrer"
                  >
                    <span
                      class="euiListItemLayout__content emotion-euiListItemLayout__content"
                    >
                      <span
                        class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
                        title="monitoring"
                      >
                        monitoring
                      </span>
                    </span>
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiCollapsibleNavGroup emotion-euiCollapsibleNavGroup-notCollapsible-none"
        data-test-subj="collapsibleNavGroup-noCategory"
        id="generated-id"
      >
        <div
          class="euiCollapsibleNavGroup__children emotion-euiCollapsibleNavGroup__children"
        >
          <ul
            class="euiListGroup emotion-euiListGroup-maxWidthDefault"
          >
            <li
              class="euiListItemLayout__wrapper emotion-euiListItemLayout__wrapper-isInteractive"
              data-test-subj="collapsibleNavAppLink-wrapper"
            >
              <a
                class="euiListItemLayout euiListGroupItem euiListGroupItem__button emotion-euiListItemLayout-euiListItemLayout__action-euiListGroupItem-euiListGroupItem__inner-text"
                data-test-subj="collapsibleNavAppLink"
                href="canvas"
                rel="noreferrer"
              >
                <span
                  class="euiListItemLayout__content emotion-euiListItemLayout__content"
                >
                  <span
                    class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
                    title="canvas"
                  >
                    canvas
                  </span>
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </nav>,
]
`;

exports[`CollapsibleNav renders the default nav 1`] = `
<CollapsibleNav
  button={<button />}
  closeNav={[Function]}
  id="collapsibe-nav"
  isNavOpen={false}
  storage={
    StubBrowserStorage {
      "keys": Array [],
      "size": 0,
      "sizeLimit": 5000000,
      "values": Array [],
    }
  }
>
  <EuiCollapsibleNav
    aria-label="Primary"
    button={<button />}
    css="unknown styles"
    data-test-subj="collapsibleNav"
    id="collapsibe-nav"
    isOpen={false}
    onClose={[Function]}
    ownFocus={false}
    size={248}
  >
    <Insertion
      cache={
        Object {
          "insert": [Function],
          "inserted": Object {
            "1751mc5-navCss": true,
          },
          "key": "css",
          "nonce": undefined,
          "registered": Object {
            "css-1751mc5-navCss": "@media (max-height: 240px){overflow-y:auto;};label:navCss;",
          },
          "sheet": StyleSheet {
            "_insertTag": [Function],
            "before": null,
            "container": <head>
              <style
                data-emotion="css"
                data-s=""
              >
                
              </style>
            </head>,
            "ctr": 1,
            "insertionPoint": undefined,
            "isSpeedy": true,
            "key": "css",
            "nonce": undefined,
            "prepend": undefined,
            "tags": Array [
              <style
                data-emotion="css"
                data-s=""
              >
                
              </style>,
            ],
          },
        }
      }
      isStringTag={false}
      serialized={
        Object {
          "name": "1751mc5-navCss",
          "next": undefined,
          "styles": "@media (max-height: 240px){overflow-y:auto;};label:navCss;",
        }
      }
    />
    <EuiCollapsibleNav
      aria-label="Primary"
      button={<button />}
      className="css-1751mc5-navCss"
      data-test-subj="collapsibleNav"
      id="collapsibe-nav"
      isOpen={false}
      onClose={[Function]}
      ownFocus={false}
      size={248}
    >
      <button
        aria-controls="collapsibe-nav"
        aria-expanded={false}
        aria-pressed={false}
        onMouseUpCapture={[Function]}
        onTouchEnd={[Function]}
      />
    </EuiCollapsibleNav>
  </EuiCollapsibleNav>
</CollapsibleNav>
`;

exports[`CollapsibleNav renders the default nav 2`] = `
<CollapsibleNav
  button={<button />}
  closeNav={[Function]}
  id="collapsibe-nav"
  isNavOpen={false}
  isOpen={true}
  storage={
    StubBrowserStorage {
      "keys": Array [],
      "size": 0,
      "sizeLimit": 5000000,
      "values": Array [],
    }
  }
>
  <EuiCollapsibleNav
    aria-label="Primary"
    button={<button />}
    css="unknown styles"
    data-test-subj="collapsibleNav"
    id="collapsibe-nav"
    isOpen={false}
    onClose={[Function]}
    ownFocus={false}
    size={248}
  >
    <Insertion
      cache={
        Object {
          "insert": [Function],
          "inserted": Object {
            "1751mc5-navCss": true,
          },
          "key": "css",
          "nonce": undefined,
          "registered": Object {
            "css-1751mc5-navCss": "@media (max-height: 240px){overflow-y:auto;};label:navCss;",
          },
          "sheet": StyleSheet {
            "_insertTag": [Function],
            "before": null,
            "container": <head>
              <style
                data-emotion="css"
                data-s=""
              >
                
              </style>
            </head>,
            "ctr": 1,
            "insertionPoint": undefined,
            "isSpeedy": true,
            "key": "css",
            "nonce": undefined,
            "prepend": undefined,
            "tags": Array [
              <style
                data-emotion="css"
                data-s=""
              >
                
              </style>,
            ],
          },
        }
      }
      isStringTag={false}
      serialized={
        Object {
          "name": "1751mc5-navCss",
          "next": undefined,
          "styles": "@media (max-height: 240px){overflow-y:auto;};label:navCss;",
        }
      }
    />
    <EuiCollapsibleNav
      aria-label="Primary"
      button={<button />}
      className="css-1751mc5-navCss"
      data-test-subj="collapsibleNav"
      id="collapsibe-nav"
      isOpen={false}
      onClose={[Function]}
      ownFocus={false}
      size={248}
    >
      <button
        aria-controls="collapsibe-nav"
        aria-expanded={false}
        aria-pressed={false}
        onMouseUpCapture={[Function]}
        onTouchEnd={[Function]}
      />
    </EuiCollapsibleNav>
  </EuiCollapsibleNav>
</CollapsibleNav>
`;
